engine/mono/Imgui/imgui.cs


        // ../../imgui/imgui.h:563
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Selectable@ImGui@@YA_NPEBDPEA_NHAEBUImVec2@@@Z")]
        public static extern bool Selectable(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref bool p_selected,
            int flags = default,
            in Vector2 size = default
        );

        // ../../imgui/imgui.h:567
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ListBox@ImGui@@YA_NPEBDPEAHQEBQEBDHH@Z")]
        public static extern bool ListBox(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int current_item,
            in IntPtr items,
            int items_count,
            int height_in_items = -1
        );

        // ../../imgui/imgui.h:568
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ListBox@ImGui@@YA_NPEBDPEAHP6A_NPEAXHPEAPEBD@Z2HH@Z")]
        public static extern bool ListBox(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int current_item,
            IntPtr items_getter,
            IntPtr data,
            int items_count,
            int height_in_items = -1
        );

        // ../../imgui/imgui.h:569
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ListBoxHeader@ImGui@@YA_NPEBDAEBUImVec2@@@Z")]
        public static extern bool ListBoxHeader(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in Vector2 size = default
        );

        // ../../imgui/imgui.h:570
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ListBoxHeader@ImGui@@YA_NPEBDHH@Z")]
        public static extern bool ListBoxHeader(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int items_count,
            int height_in_items = -1
        );

        // ../../imgui/imgui.h:571
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ListBoxFooter@ImGui@@YAXXZ")]
        public static extern void ListBoxFooter(
        );

        // ../../imgui/imgui.h:574
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PlotLines@ImGui@@YAXPEBDPEBMHH0MMUImVec2@@H@Z")]
        public static extern void PlotLines(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in float values,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min,
            float scale_max,
            Vector2 graph_size,
            int stride
        );
        // overload
        public static void PlotLines(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in float values,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min,
            float scale_max,
            Vector2 graph_size = default
        )
        {
            PlotLines(label, values, values_count, values_offset, overlay_text, scale_min, scale_max, graph_size, sizeof(float));
        }
        // overload
        public static void PlotLines(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in float values,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min
        )
        {
            PlotLines(label, values, values_count, values_offset, overlay_text, scale_min, float.MaxValue);
        }
        // overload
        public static void PlotLines(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in float values,
            int values_count,
            int values_offset = default,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text = default
        )
        {
            PlotLines(label, values, values_count, values_offset, overlay_text, float.MaxValue);
        }

        // ../../imgui/imgui.h:575
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PlotLines@ImGui@@YAXPEBDP6AMPEAXH@Z1HH0MMUImVec2@@@Z")]
        public static extern void PlotLines(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            IntPtr values_getter,
            IntPtr data,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min,
            float scale_max,
            Vector2 graph_size = default
        );
        // overload
        public static void PlotLines(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            IntPtr values_getter,
            IntPtr data,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min
        )
        {
            PlotLines(label, values_getter, data, values_count, values_offset, overlay_text, scale_min, float.MaxValue);
        }
        // overload
        public static void PlotLines(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            IntPtr values_getter,
            IntPtr data,
            int values_count,
            int values_offset = default,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text = default
        )
        {
            PlotLines(label, values_getter, data, values_count, values_offset, overlay_text, float.MaxValue);
        }

        // ../../imgui/imgui.h:576
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PlotHistogram@ImGui@@YAXPEBDPEBMHH0MMUImVec2@@H@Z")]
        public static extern void PlotHistogram(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in float values,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min,
            float scale_max,
            Vector2 graph_size,
            int stride
        );
        // overload
        public static void PlotHistogram(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in float values,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min,
            float scale_max,
            Vector2 graph_size = default
        )
        {
            PlotHistogram(label, values, values_count, values_offset, overlay_text, scale_min, scale_max, graph_size, sizeof(float));
        }
        // overload
        public static void PlotHistogram(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in float values,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min
        )
        {
            PlotHistogram(label, values, values_count, values_offset, overlay_text, scale_min, float.MaxValue);
        }
        // overload
        public static void PlotHistogram(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in float values,
            int values_count,
            int values_offset = default,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text = default
        )
        {
            PlotHistogram(label, values, values_count, values_offset, overlay_text, float.MaxValue);
        }

        // ../../imgui/imgui.h:577
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PlotHistogram@ImGui@@YAXPEBDP6AMPEAXH@Z1HH0MMUImVec2@@@Z")]
        public static extern void PlotHistogram(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            IntPtr values_getter,
            IntPtr data,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min,
            float scale_max,
            Vector2 graph_size = default
        );
        // overload
        public static void PlotHistogram(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            IntPtr values_getter,
            IntPtr data,
            int values_count,
            int values_offset,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text,
            float scale_min
        )
        {
            PlotHistogram(label, values_getter, data, values_count, values_offset, overlay_text, scale_min, float.MaxValue);
        }
        // overload
        public static void PlotHistogram(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            IntPtr values_getter,
            IntPtr data,
            int values_count,
            int values_offset = default,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string overlay_text = default
        )
        {
            PlotHistogram(label, values_getter, data, values_count, values_offset, overlay_text, float.MaxValue);
        }

        // ../../imgui/imgui.h:581
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Value@ImGui@@YAXPEBD_N@Z")]
        public static extern void Value(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string prefix,
            bool b
        );

        // ../../imgui/imgui.h:582
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Value@ImGui@@YAXPEBDH@Z")]
        public static extern void Value(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string prefix,
            int v
        );

        // ../../imgui/imgui.h:583
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Value@ImGui@@YAXPEBDI@Z")]
        public static extern void Value(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string prefix,
            uint v
        );

        // ../../imgui/imgui.h:584
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Value@ImGui@@YAXPEBDM0@Z")]
        public static extern void Value(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string prefix,
            float v,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string float_format = default
        );

        // ../../imgui/imgui.h:590
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginMenuBar@ImGui@@YA_NXZ")]
        public static extern bool BeginMenuBar(
        );

        // ../../imgui/imgui.h:591
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndMenuBar@ImGui@@YAXXZ")]
        public static extern void EndMenuBar(
        );

        // ../../imgui/imgui.h:592
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginMainMenuBar@ImGui@@YA_NXZ")]
        public static extern bool BeginMainMenuBar(
        );

        // ../../imgui/imgui.h:593
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndMainMenuBar@ImGui@@YAXXZ")]
        public static extern void EndMainMenuBar(
        );

        // ../../imgui/imgui.h:594
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BeginMenu@ImGui@@YA_NPEBD_N@Z")]
        public static extern bool BeginMenu(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            bool enabled
        );
        // overload
        public static bool BeginMenu(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label
        )
        {
            return BeginMenu(label, true);
        }

        // ../../imgui/imgui.h:595
        [DllImport(Engine.Paths.Exe, EntryPoint = "?EndMenu@ImGui@@YAXXZ")]
        public static extern void EndMenu(
        );
